sema/testdata/fail/type_mismatch.c
int main(void) {
    int *p;
    p = 3.14;
    return 0;
}
